tests/error/swicth_no_cases.gw
#! [contains] switch statement with no cases
switch(1) {
  <<<__func__>>>;
}
